--- a/manual/emacspeak_002dvm.html
+++ b/manual/emacspeak_002dvm.html
@@ -23,8 +23,8 @@
   "Table of Contents" />
   <link href="Emacspeak-Commands-And-Options.html" rel="up" title=
   "Emacspeak Commands And Options" />
-  <link href="emacspeak_002dvuiet.html" rel="next" title=
-  "emacspeak-vuiet" />
+  <link href="emacspeak_002dvterm.html" rel="next" title=
+  "emacspeak-vterm" />
   <link href="emacspeak_002dview.html" rel="prev" title=
   "emacspeak-view" />
   <style type="text/css">
@@ -53,8 +53,8 @@
 <body lang="en" xml:lang="en">
   <span id="emacspeak_002dvm"></span>
   <div class="header">
-    <p>Next: <a href="emacspeak_002dvuiet.html" accesskey="n" rel=
-    "next">emacspeak-vuiet</a>, Previous: <a href=
+    <p>Next: <a href="emacspeak_002dvterm.html" accesskey="n" rel=
+    "next">emacspeak-vterm</a>, Previous: <a href=
     "emacspeak_002dview.html" accesskey="p" rel=
     "prev">emacspeak-view</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
@@ -200,7 +200,7 @@ that has been forwarded multiple times.
   </dl><span id="emacspeak_002dvm-Options"></span>
   <h4 class="subsection">12.198.2 emacspeak-vm Options</h4>
   <dl>
-    <dt id="index-User-Option-784">Variable: <strong>User
+    <dt id="index-User-Option-776">Variable: <strong>User
     Option</strong> <em>emacspeak-vm-cal2text</em></dt>
     <dd>
       <p>Executable that converts calendar invitations on standard
@@ -208,7 +208,7 @@ that has been forwarded multiple times.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-785">Variable: <strong>User
+    <dt id="index-User-Option-777">Variable: <strong>User
     Option</strong>
     <em>emacspeak-vm-customize-mime-settings</em></dt>
     <dd>
@@ -217,7 +217,7 @@ that has been forwarded multiple times.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-786">Variable: <strong>User
+    <dt id="index-User-Option-778">Variable: <strong>User
     Option</strong> <em>emacspeak-vm-pdf2text</em></dt>
     <dd>
       <p>Executable that converts PDF on standard input to plain
@@ -225,7 +225,7 @@ that has been forwarded multiple times.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-787">Variable: <strong>User
+    <dt id="index-User-Option-779">Variable: <strong>User
     Option</strong> <em>emacspeak-vm-use-raman-settings</em></dt>
     <dd>
       <p>Should VM use the customizations used by the author of
@@ -233,7 +233,7 @@ that has been forwarded multiple times.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-788">Variable: <strong>User
+    <dt id="index-User-Option-780">Variable: <strong>User
     Option</strong> <em>emacspeak-vm-voice-loc</em></dt>
     <dd>
       <p>Set this to T if you want messages automatically voice
@@ -243,8 +243,8 @@ that has been forwarded multiple times.
   </dl>
   <hr />
   <div class="header">
-    <p>Next: <a href="emacspeak_002dvuiet.html" accesskey="n" rel=
-    "next">emacspeak-vuiet</a>, Previous: <a href=
+    <p>Next: <a href="emacspeak_002dvterm.html" accesskey="n" rel=
+    "next">emacspeak-vterm</a>, Previous: <a href=
     "emacspeak_002dview.html" accesskey="p" rel=
     "prev">emacspeak-view</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
