--- a/manual/emacspeak_002dvuiet.html
+++ b/manual/emacspeak_002dvuiet.html
@@ -25,8 +25,8 @@
   "Emacspeak Commands And Options" />
   <link href="emacspeak_002dwdired.html" rel="next" title=
   "emacspeak-wdired" />
-  <link href="emacspeak_002dvm.html" rel="prev" title=
-  "emacspeak-vm" />
+  <link href="emacspeak_002dvterm.html" rel="prev" title=
+  "emacspeak-vterm" />
   <style type="text/css">
   /*<![CDATA[*/
   <!--
@@ -55,8 +55,8 @@
   <div class="header">
     <p>Next: <a href="emacspeak_002dwdired.html" accesskey="n" rel=
     "next">emacspeak-wdired</a>, Previous: <a href=
-    "emacspeak_002dvm.html" accesskey="p" rel=
-    "prev">emacspeak-vm</a>, Up: <a href=
+    "emacspeak_002dvterm.html" accesskey="p" rel=
+    "prev">emacspeak-vterm</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
     "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
     "index.html#SEC_Contents" title="Table of contents" rel=
@@ -65,14 +65,14 @@
   </div>
   <hr />
   <span id="emacspeak_002dvuiet-1"></span>
-  <h3 class="section">12.199 emacspeak-vuiet</h3>
+  <h3 class="section">12.200 emacspeak-vuiet</h3>
   <p>VUIET == Emacs Music Explorer And Player with last.fm
   integration This module speech-enables vuiet.</p><span id=
   "Emacspeak_002dVuiet-Commands"></span>
-  <h4 class="subsection">12.199.1 Emacspeak-Vuiet
+  <h4 class="subsection">12.200.1 Emacspeak-Vuiet
   Commands</h4><span id=
   "emacspeak_002dvuiet_002dtrack_002dinfo"></span>
-  <h4 class="subsubsection">12.199.1.1
+  <h4 class="subsubsection">12.200.1.1
   emacspeak-vuiet-track-info</h4>
   <dl>
     <dt id="index-emacspeak_002dvuiet_002dtrack_002dinfo">Command:
