--- a/manual/Emacspeak-Commands-And-Options.html
+++ b/manual/Emacspeak-Commands-And-Options.html
@@ -94,7 +94,7 @@
   the <acronym title="Emacs Web Wowser">EWW</acronym>
   documentation, then read See <a href=
   "emacspeak_002deww.html">emacspeak-eww</a>.</p>
-  <p>This chapter documents a total of 1169 commands and 861
+  <p>This chapter documents a total of 1169 commands and 863
   options.</p>
   <table class="menu" border="0" cellspacing="0">
     <tr>
@@ -1392,6 +1392,12 @@
       "emacspeak_002dvm.html">emacspeak-vm</a></td>
       <td>&nbsp;&nbsp;</td>
       <td align="left" valign="top">Speech enable VMMail.</td>
+    </tr>
+    <tr>
+      <td align="left" valign="top">• <a href=
+      "emacspeak_002dvterm.html">emacspeak-vterm</a></td>
+      <td>&nbsp;&nbsp;</td>
+      <td align="left" valign="top">Speech-enable VTERM.</td>
     </tr>
     <tr>
       <td align="left" valign="top">• <a href=
