--- a/manual/emacspeak_002dcomint.html
+++ b/manual/emacspeak_002dcomint.html
@@ -157,7 +157,7 @@ set the current local value to the result.
       "index-emacspeak_002dtoggle_002dinaudible_002dor_002dcomint_002dautospeak-1"></span>
       <div class="format">
         <pre class=
-        "format">Toggle comint-autospeak when in a comint buffer.
+        "format">Toggle comint-autospeak when in a comint or vterm buffer.
 Otherwise call voice-setup-toggle-silence-personality which toggles the
 personality under point.
 </pre>
