--- a/manual/emacspeak_002dspeak.html
+++ b/manual/emacspeak_002dspeak.html
@@ -2033,6 +2033,7 @@ personality.
         <pre class="format">Speak the time.
 Optional interactive prefix arg ‘C-u’invokes world clock.
 Timezone is specified using minibuffer completion.
+Copies time to kill-ring.
 Second interactive prefix sets clock to new timezone.
 
 (fn &amp;optional WORLD)
