--- a/manual/index.html
+++ b/manual/index.html
@@ -53,7 +53,7 @@
   <h1 class="settitle c2">Emacspeak User’s Manual — 2nd
   Edition.</h1>
   <p>This manual documents <strong>Emacspeak, The Complete Audio
-  Desktop</strong> and was last updated on November 12,
+  Desktop</strong> and was last updated on November 16,
   2020.</p><span id="SEC_Overview"></span>
   <h2 class="shortcontents-heading">Short Table of Contents</h2>
   <div class="shortcontents">
@@ -9168,9 +9168,12 @@
             "emacspeak_002dvterm.html#emacspeak_002dvterm" name=
             "toc-emacspeak_002dvterm-1">12.199 emacspeak-vterm</a>
             <ul class="no-bullet">
+              <li><a id="toc-Usage-3" href=
+              "emacspeak_002dvterm.html#Usage-3" name=
+              "toc-Usage-3">12.199.1 Usage</a></li>
               <li><a id="toc-emacspeak_002dvterm-Options" href=
               "emacspeak_002dvterm.html#emacspeak_002dvterm-Options"
-              name="toc-emacspeak_002dvterm-Options">12.199.1
+              name="toc-emacspeak_002dvterm-Options">12.199.2
               emacspeak-vterm Options</a></li>
             </ul>
           </li>
