--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -195,8 +195,8 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html#index-_003cf1_003e-T"><code>&lt;f1&gt;
-      T</code></a>:</td>
+      "emacspeak_002dspeak.html#index-_003cf1_003e-N"><code>&lt;f1&gt;
+      N</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dspeak.html">emacspeak-speak</a></td>
@@ -2678,8 +2678,8 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html#index-_003chelp_003e-T"><code>&lt;help&gt;
-      T</code></a>:</td>
+      "emacspeak_002dspeak.html#index-_003chelp_003e-N"><code>&lt;help&gt;
+      N</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dspeak.html">emacspeak-speak</a></td>
@@ -6518,8 +6518,8 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html#index-C_002dh-T"><code>C-h
-      T</code></a>:</td>
+      "emacspeak_002dspeak.html#index-C_002dh-N"><code>C-h
+      N</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dspeak.html">emacspeak-speak</a></td>
