--- a/manual/emacspeak_002dspeak.html
+++ b/manual/emacspeak_002dspeak.html
@@ -2031,9 +2031,10 @@ personality.
       </dl><span id="index-emacspeak_002dspeak_002dtime-2"></span>
       <div class="format">
         <pre class="format">Speak the time.
+Spoken time  is available in the *notifications* buffer via C-h N.
 Optional interactive prefix arg ‘C-u’invokes world clock.
 Timezone is specified using minibuffer completion.
-Copies time to kill-ring.
+
 Second interactive prefix sets clock to new timezone.
 
 (fn &amp;optional WORLD)
@@ -2459,12 +2460,12 @@ current local  value to the result.
     <strong>emacspeak-view-notifications</strong></dt>
     <dd>
       <dl compact="compact">
-        <dt><kbd>C-h T</kbd></dt>
-        <dd><span id="index-C_002dh-T"></span></dd>
-        <dt><kbd>&lt;f1&gt; T</kbd></dt>
-        <dd><span id="index-_003cf1_003e-T"></span></dd>
-        <dt><kbd>&lt;help&gt; T</kbd></dt>
-        <dd><span id="index-_003chelp_003e-T"></span></dd>
+        <dt><kbd>C-h N</kbd></dt>
+        <dd><span id="index-C_002dh-N"></span></dd>
+        <dt><kbd>&lt;f1&gt; N</kbd></dt>
+        <dd><span id="index-_003cf1_003e-N"></span></dd>
+        <dt><kbd>&lt;help&gt; N</kbd></dt>
+        <dd><span id="index-_003chelp_003e-N"></span></dd>
       </dl><span id=
       "index-emacspeak_002dview_002dnotifications-1"></span>
       <div class="format">
