--- a/manual/Speech-Output-Control.html
+++ b/manual/Speech-Output-Control.html
@@ -143,21 +143,19 @@
     <dd>
       <p><code>dtk-toggle-capitalization</code></p>
       <p>Toggle capitalization. when set, capitalization is
-      indicated by a short beep. Interactive PREFIX arg means
-      toggle the global default value, and then set the current
-      local value to the result.</p><span id=
-      "index-dtk_002dtoggle_002dallcaps_002dbeep"></span> <span id=
+      indicated by a <em>cap</em> before the word. Interactive
+      PREFIX arg means toggle the global default value, and then
+      set the current local value to the result.</p><span id=
+      "index-dtk_002dtoggle_002dallcaps"></span> <span id=
       "index-C_002de-d-cap-C"></span>
     </dd>
     <dt><kbd>C-e d cap C</kbd></dt>
     <dd>
-      <p><code>dtk-toggle-allcaps-beep</code></p>
-      <p>Toggle allcaps-beep. When set, allcaps words are indicated
-      by a short beep. Interactive PREFIX arg means toggle the
+      <p><code>dtk-toggle-allcaps</code></p>
+      <p>Toggle allcaps. When set, allcaps words are indicated by a
+      short <em>ac</em>. Interactive PREFIX arg means toggle the
       global default value, and then set the current local value to
-      the result. Note that allcaps-beep is a very useful thing
-      when programming. However it is irritating to have it on when
-      reading documents.</p>
+      the result. Note that</p>
     </dd>
   </dl>
   <p>In addition, Emacspeak can convey the indentation of lines as
