--- a/manual/TTS-Servers.html
+++ b/manual/TTS-Servers.html
@@ -277,13 +277,13 @@
     <pre class="example">tts_capitalize flag
 </pre>
   </div>
-  <p>Indicate capitalization via a beep tone or voice pitch.</p>
+  <p>Indicate capitalization.</p>
   <div class="example">
-    <pre class="example">tts_allcaps_beep flag
+    <pre class="example">tts_allcaps flag
 </pre>
   </div>
-  <p>Setting this flag produces a high-pitched beep when speaking
-  words that are in all-caps, e.g. abbreviations.</p>
+  <p>Setting this flag precedes upper-case words with a
+  <em>ac</em>.</p>
   <hr />
   <div class="header">
     <p>Next: <a href="Emacspeak-At-Twenty.html" accesskey="n" rel=
