--- a/manual/URL-Templates.html
+++ b/manual/URL-Templates.html
@@ -63,7 +63,7 @@
   <hr />
   <span id="URL-Templates-1"></span>
   <h3 class="section">12.232 URL Templates</h3>
-  <p>This section documents a total of 75 URL Templates.</p>
+  <p>This section documents a total of 76 URL Templates.</p>
   <p>All of these URL templates can be invoked via command <kbd>M-x
   emacspeak-url-template-fetch</kbd> normally bound to <kbd>C-e u
   &lt;fn&gt; u</kbd>. This command prompts for the name of the
@@ -231,6 +231,10 @@
     <li>
       <b>Hacker News Search</b>
       <p>Display Hacker News Front Page</p>
+    </li>
+    <li>
+      <b>Hoogle Haskell API Search</b>
+      <p>Haskell API Search against a local server.</p>
     </li>
     <li>
       <b>MLB Scorecard</b>
