--- a/manual/dtk_002dspeak.html
+++ b/manual/dtk_002dspeak.html
@@ -533,11 +533,11 @@ Optional arg ‘all’ or interactive call   silences notification stream as wel
 </pre>
       </div>
     </dd>
-  </dl><span id="dtk_002dtoggle_002dallcaps_002dbeep"></span>
-  <h4 class="subsubsection">12.7.1.22 dtk-toggle-allcaps-beep</h4>
+  </dl><span id="dtk_002dtoggle_002dallcaps"></span>
+  <h4 class="subsubsection">12.7.1.22 dtk-toggle-allcaps</h4>
   <dl>
-    <dt id="index-dtk_002dtoggle_002dallcaps_002dbeep-1">Command:
-    <strong>dtk-toggle-allcaps-beep</strong> <em>(&amp;optional
+    <dt id="index-dtk_002dtoggle_002dallcaps-1">Command:
+    <strong>dtk-toggle-allcaps</strong> <em>(&amp;optional
     prefix)</em></dt>
     <dd>
       <dl compact="compact">
@@ -545,14 +545,13 @@ Optional arg ‘all’ or interactive call   silences notification stream as wel
         <dd><span id="index-C_002de-d-C"></span></dd>
         <dt><kbd>&lt;fn&gt; d C</kbd></dt>
         <dd><span id="index-_003cfn_003e-d-C"></span></dd>
-      </dl><span id=
-      "index-dtk_002dtoggle_002dallcaps_002dbeep-2"></span>
+      </dl><span id="index-dtk_002dtoggle_002dallcaps-2"></span>
       <div class="format">
-        <pre class="format">Toggle allcaps-beep.
+        <pre class="format">Toggle allcaps.
 when set, allcaps words  are  indicated by a
 short beep.  Interactive PREFIX arg means toggle the global default
 value, and then set the current local value to the result.
-Note that allcaps-beep is a very useful thing when programming.
+Note that allcaps is a very useful thing when programming.
 However it is irritating to have it on when reading documents.
 </pre>
       </div>
