--- a/manual/index.html
+++ b/manual/index.html
@@ -53,7 +53,7 @@
   <h1 class="settitle c2">Emacspeak User’s Manual — 2nd
   Edition.</h1>
   <p>This manual documents <strong>Emacspeak, The Complete Audio
-  Desktop</strong> and was last updated on November 21,
+  Desktop</strong> and was last updated on November 25,
   2020.</p><span id="SEC_Overview"></span>
   <h2 class="shortcontents-heading">Short Table of Contents</h2>
   <div class="shortcontents">
@@ -648,12 +648,10 @@
                   <li><a id="toc-dtk_002dstop" href=
                   "dtk_002dspeak.html#dtk_002dstop" name=
                   "toc-dtk_002dstop">12.7.1.21 dtk-stop</a></li>
-                  <li><a id=
-                  "toc-dtk_002dtoggle_002dallcaps_002dbeep" href=
-                  "dtk_002dspeak.html#dtk_002dtoggle_002dallcaps_002dbeep"
-                  name=
-                  "toc-dtk_002dtoggle_002dallcaps_002dbeep">12.7.1.22
-                  dtk-toggle-allcaps-beep</a></li>
+                  <li><a id="toc-dtk_002dtoggle_002dallcaps" href=
+                  "dtk_002dspeak.html#dtk_002dtoggle_002dallcaps"
+                  name="toc-dtk_002dtoggle_002dallcaps">12.7.1.22
+                  dtk-toggle-allcaps</a></li>
                   <li><a id="toc-dtk_002dtoggle_002dcapitalization"
                   href=
                   "dtk_002dspeak.html#dtk_002dtoggle_002dcapitalization"
